Fixed scroll issue on iphone mobile sets

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -8783,6 +8783,11 @@ body.cart-drawer-open, body.vape-drawer-open {
   overflow: hidden;
 }
 
+@media (max-width: 560px) {
+  body.cart-drawer-open, body.vape-drawer-open {
+    position: fixed;
+  }
+}
 .cart-drawer-backdrop {
   background: #000000;
   opacity: 0.7;
