--- a/styles/_cart-drawer.scss
+++ b/styles/_cart-drawer.scss
@@ -1,7 +1,11 @@
 body.cart-drawer-open, body.vape-drawer-open {
     overflow: hidden;
 }
-
+@media (max-width: 560px){
+    body.cart-drawer-open, body.vape-drawer-open {
+        position: fixed;
+    }
+}
 .cart-drawer-backdrop {
     background: #000000;
     opacity: 0.7;
